--- a/CSMOEAs/CSMOEAs.csproj
+++ b/CSMOEAs/CSMOEAs.csproj
@@ -158,6 +158,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QualityIndicator\QulityIndicator.cs" />
+    <Compile Include="UserControls\ucBackPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\ucBackPanel.Designer.cs">
+      <DependentUpon>ucBackPanel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -177,6 +183,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\ucBackPanel.resx">
+      <DependentUpon>ucBackPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="POF\APOF\F1" />
     <None Include="POF\APOF\F2" />
     <None Include="POF\APOF\F3" />
